<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="47dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_register_phone"
                android:textColor="@color/text_normal"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_phone_number"
                style="@style/edit_text_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_register_enter_phone"
                android:inputType="phone" />

            <TextView
                android:id="@+id/text_phone_register_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/phone_register_message"
                android:textColor="@color/text_comment" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/term_msg"
            android:textColor="@color/text_comment"
            android:textSize="14sp" />


        <com.example.registergittest.view.MtaxiButton
            android:id="@+id/btn_phone_register"
            style="@style/btn_type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/phone_register_agree" />
    </LinearLayout>
</LinearLayout>