<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/layout_fist_login_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_big" />

            <TextView
                android:id="@+id/text_welcome_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/login_welcome_message"
                android:textColor="@color/text_normal"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_guest_login_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/text_guest_welcome_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/guest_login"
                android:textColor="@color/text_normal"
                android:textSize="32sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_welcome_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/guest_login_welcome"
            android:textColor="@color/text_comment"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <com.example.registergittest.view.MtaxiButton
            android:id="@+id/btn_sms_register"
            style="@style/btn_type2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_sms_register"
            android:textSize="18sp" />

        <com.example.registergittest.view.MtaxiButton
            android:id="@+id/btn_phone_register"
            style="@style/btn_type1"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_or_phone_register"
            android:textSize="18sp" />

        <com.example.registergittest.view.MtaxiButton
            android:id="@+id/btn_login_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:padding="15dp"
            android:text="@string/login_again"
            android:textColor="@color/text_normal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.example.registergittest.view.MtaxiButton
            android:id="@+id/btn_skip_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27.5dp"
            android:background="@null"
            android:text="@string/login_skip"
            android:textColor="@color/text_normal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp">

            <com.example.registergittest.view.MtaxiButton
                android:id="@+id/btn_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:text="@string/term"
                android:textColor="@color/text_comment" />

            <com.example.registergittest.view.MtaxiButton
                android:id="@+id/btn_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="@string/login_help"
                android:textStyle="bold"
                android:textColor="@color/text_normal" />
        </RelativeLayout>
    </LinearLayout>
    <!--
 <fragment android:name="com.example.register.PhoneRegisterFragment"
     android:id="@+id/phoneRegisterFrament"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
-->

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>
</RelativeLayout>